create another user template and style2.css for this template

--- a/user_list.html
+++ b/user_list.html
@@ -106,13 +106,14 @@
             <div><input type="checkbox" name="method" value="scrum" id="scrum"><label for="scrum">Scrum</label></div>
           </div>
         </div>
+      </div>
     </aside>
     <main class="user_container">
       <section class="user_list">
         <a href="user.html">
           <div class="card ml-3 mb-4 user php" style="width: 19rem;">
             <div class="mx-auto">
-              <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
+              <img class="users img-rounded mx-auto d-flex mt-2" src="images/dd.jpg" alt="Card image cap">
             </div>
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -123,7 +124,7 @@
         </a>
         <div class="card ml-3 mb-4 user php" style="width: 19rem;">
           <div class="mx-auto">
-            <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
+            <img class="users img-rounded d-flex mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
           </div>
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -134,7 +135,7 @@
 
         <div class="card ml-3 mb-4 user symfony" style="width: 19rem;">
           <div class="mx-auto">
-            <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
+            <img class="users img-rounded mx-auto d-flex mt-2" src="images/dd.jpg" alt="Card image cap">
           </div>
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -145,7 +146,7 @@
         </div>
         <div class="card ml-3 mb-4 user react" style="width: 19rem;">
           <div class="mx-auto">
-            <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
+            <img class="users img-rounded mx-auto d-flex mt-2" src="images/dd.jpg" alt="Card image cap">
           </div>
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -157,7 +158,7 @@
 
         <div class="card ml-3 mb-4 user react" style="width: 19rem;">
           <div class="mx-auto">
-            <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
+            <img class="users img-rounded mx-auto d-flex mt-2" src="images/dd.jpg" alt="Card image cap">
           </div>
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -168,7 +169,7 @@
 
         <div class="card ml-3 mb-4 user symfony" style="width: 19rem;">
           <div class="mx-auto">
-            <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
+            <img class="users img-rounded mx-auto d-flex mt-2" src="images/dd.jpg" alt="Card image cap">
           </div>
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
