--- a/project_list.html
+++ b/project_list.html
@@ -18,44 +18,45 @@
 
 <body>
     <!-- Nav -->
-  <nav class="navbar navbar-expand-lg navbar-light justify-content-between fixed-top stroke">
-    <div class="order-lg-1">
-      <button class="navbar-toggler" type="button" data-trigger="#menu">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="navbar-collapse left" id="menu">
-        <div class="offcanvas-header mt-3">
-          <button class="btn btn-outline-danger btn-close float-right">&times</button>
+    <nav class="navbar navbar-expand-lg navbar-light justify-content-between fixed-top stroke">
+        <div class="order-lg-1">
+            <button class="navbar-toggler" type="button" data-trigger="#menu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse left" id="menu">
+                <div class="offcanvas-header mt-3">
+                    <button class="btn btn-outline-danger btn-close float-right">&times</button>
+                </div>
+                <ul class="navbar-nav nav_left">
+                    <li class="nav-item"> <a class="nav-link" href="user_list.html"> Idealiseurs </a> </li>
+                    <li class="nav-item"><a class="nav-link" href="project_list.html"> Projets</a></li>
+                </ul>
+            </div>
         </div>
-        <ul class="navbar-nav nav_left">
-          <li class="nav-item"> <a class="nav-link" href="user_list.html"> Idealiseurs </a> </li>
-          <li class="nav-item"><a class="nav-link" href="project_list.html"> Projets</a></li>
-        </ul>
-      </div>
-    </div>
-    <!-- navbar-collapse menu.// -->
-    <div class="order-lg-2">
+        <!-- navbar-collapse menu.// -->
+        <div class="order-lg-2">
 
-      <a class="navbar-brand" href="index.html"><img id="logo" src="html-css-js/placeholder.com-logo1.png" alt=""></a>
-    </div>
-
-    <div class="order-lg-3">
-      <button class="navbar-toggler" type="button" data-trigger="#log">
-        <span class="fa fa-user-circle-o" aria-hidden="true"></span>
-      </button>
-      <div class="navbar-collapse right" id="log">
-
-        <div class="offcanvas-header mt-3">
-          <button class="btn btn-outline-danger btn-close float-right">&times</button>
+            <a class="navbar-brand" href="index.html"><img id="logo" src="html-css-js/placeholder.com-logo1.png"
+                    alt=""></a>
         </div>
 
-        <ul class="navbar-nav nav_right">
-          <li class="nav-item"> <a class="nav-link button" href="#popup"> Se connecter </a> </li>
-          <li class="nav-item"><a class="nav-link" href="#"> S'inscrire</a></li>
-        </ul>
-      </div> <!-- navbar-collapse.// -->
-    </div>
-  </nav>
+        <div class="order-lg-3">
+            <button class="navbar-toggler" type="button" data-trigger="#log">
+                <span class="fa fa-user-circle-o" aria-hidden="true"></span>
+            </button>
+            <div class="navbar-collapse right" id="log">
+
+                <div class="offcanvas-header mt-3">
+                    <button class="btn btn-outline-danger btn-close float-right">&times</button>
+                </div>
+
+                <ul class="navbar-nav nav_right">
+                    <li class="nav-item"> <a class="nav-link button" href="#popup"> Se connecter </a> </li>
+                    <li class="nav-item"><a class="nav-link" href="#"> S'inscrire</a></li>
+                </ul>
+            </div> <!-- navbar-collapse.// -->
+        </div>
+    </nav>
 
     <div class="top_div">
 
@@ -136,7 +137,7 @@
             <section class="user_list">
                 <div class="card ml-3 mb-4 user developer php" style="width: 19rem;">
                     <div class="mx-auto">
-                        <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
+                        <img class="users img-rounded mx-auto d-flex mt-2" src="images/dd.jpg" alt="Card image cap">
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
@@ -148,7 +149,7 @@
 
                 <div class="card ml-3 mb-4 user developer react" style="width: 19rem;">
                     <div class="mx-auto">
-                        <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
+                        <img class="users img-rounded mx-auto d-flex mt-2" src="images/dd.jpg" alt="Card image cap">
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
@@ -160,7 +161,7 @@
 
                 <div class="card ml-3 mb-4 user designer photoshop" style="width: 19rem;">
                     <div class="mx-auto">
-                        <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
+                        <img class="users img-rounded mx-auto d-flex mt-2" src="images/dd.jpg" alt="Card image cap">
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
@@ -172,7 +173,7 @@
                 </div>
                 <div class="card ml-3 mb-4 user developer react" style="width: 19rem;">
                     <div class="mx-auto">
-                        <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
+                        <img class="users img-rounded mx-auto d-flex mt-2" src="images/dd.jpg" alt="Card image cap">
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
@@ -185,7 +186,7 @@
 
                 <div class="card ml-3 mb-4 user designer photoshop" style="width: 19rem;">
                     <div class="mx-auto">
-                        <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
+                        <img class="users img-rounded mx-auto d-flex mt-2" src="images/dd.jpg" alt="Card image cap">
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
@@ -197,7 +198,7 @@
 
                 <div class="card ml-3 mb-4 user developer symfony" style="width: 19rem;">
                     <div class="mx-auto">
-                        <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
+                        <img class="users img-rounded mx-auto d-flex mt-2" src="images/dd.jpg" alt="Card image cap">
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
